# pazk

./: .gitignore  Cargo.toml
examples/: sumcheck.rs
scripts/: grand_product_argument.ipynb
src/: lib.rs  polynomial.rs  sumcheck.rs
src/sumcheck/: fiat_shamir.rs  ip.rs  mod.rs  non_interactive.rs  protocol.rs  prover.rs  verifier.rs
